lang-ssd/src/main/java/cal/SSExprParser.java
// Generated from D:/workspace_2020_gitlib/ssd-parents/lang-ssd/dsl\SSExpr.g4 by ANTLR 4.9.2
package cal;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SSExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, WS=24, NL=25, 
		PI=26, MIU=27, EB=28, EE=29, INTEGER=30, DIGIT=31, NEWLINE=32, Opertion=33, 
		OP=34, LESS_THAN=35, GREATER_THAN=36, EQUALS=37, GT_EQ=38, LT_EQ=39, NOT_EQ_1=40, 
		NOT_EQ_2=41, STAR=42, ADD=43, MINUS=44, DIV=45, MOD=46, AND=47, OR=48, 
		STRING=49, STRING_LITERAL=50, LETTER=51, NUMBER=52, INT=53, EXP=54, Char=55, 
		NULL=56, LeftParen=57, RightParen=58, LEFTBLOCK=59, RIGHTBLOCK=60, ARROW=61, 
		BOOLEAN=62, Identifier=63, IMAG_NUMBER=64, ORDER=65, SKIP_=66;
	public static final int
		RULE_stat = 0, RULE_expression = 1, RULE_exprComposite = 2, RULE_forInExpr = 3, 
		RULE_ifExpr = 4, RULE_ifPart = 5, RULE_elseIfPart = 6, RULE_elsePart = 7, 
		RULE_augassign = 8, RULE_block = 9, RULE_exprBlock = 10, RULE_eachExpr = 11, 
		RULE_returnExpr = 12, RULE_consts = 13, RULE_expr = 14, RULE_exprLogic = 15, 
		RULE_varAssign = 16, RULE_leftHandSide = 17, RULE_arrayAccess = 18, RULE_ternaryExpr = 19, 
		RULE_test = 20, RULE_tests = 21, RULE_item = 22, RULE_itemLogic = 23, 
		RULE_properties = 24, RULE_orders = 25, RULE_dataset_test = 26, RULE_dataset_tests = 27, 
		RULE_dataset = 28, RULE_aggregate = 29, RULE_unit = 30, RULE_pair = 31, 
		RULE_json = 32, RULE_obj = 33, RULE_arr = 34, RULE_simpleValue = 35, RULE_function = 36, 
		RULE_functionParameter = 37, RULE_join = 38, RULE_variable = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"stat", "expression", "exprComposite", "forInExpr", "ifExpr", "ifPart", 
			"elseIfPart", "elsePart", "augassign", "block", "exprBlock", "eachExpr", 
			"returnExpr", "consts", "expr", "exprLogic", "varAssign", "leftHandSide", 
			"arrayAccess", "ternaryExpr", "test", "tests", "item", "itemLogic", "properties", 
			"orders", "dataset_test", "dataset_tests", "dataset", "aggregate", "unit", 
			"pair", "json", "obj", "arr", "simpleValue", "function", "functionParameter", 
			"join", "variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'for'", "','", "'in'", "'if'", "'else'", "'+='", "'-='", "'*='", 
			"'/='", "'%='", "'.each'", "'return'", "';'", "'['", "']'", "'.'", "'='", 
			"'?'", "':'", "'++'", "'--'", "'!'", "'not'", null, null, "'PI'", "'MIU'", 
			"'EB'", "'EE'", null, null, null, null, null, "'<'", "'>'", "'=='", "'>='", 
			"'<='", "'<>'", "'!='", "'*'", "'+'", "'-'", "'/'", "'%'", null, null, 
			null, null, null, null, null, null, null, "'null'", "'('", "')'", "'{'", 
			"'}'", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"WS", "NL", "PI", "MIU", "EB", "EE", "INTEGER", "DIGIT", "NEWLINE", "Opertion", 
			"OP", "LESS_THAN", "GREATER_THAN", "EQUALS", "GT_EQ", "LT_EQ", "NOT_EQ_1", 
			"NOT_EQ_2", "STAR", "ADD", "MINUS", "DIV", "MOD", "AND", "OR", "STRING", 
			"STRING_LITERAL", "LETTER", "NUMBER", "INT", "EXP", "Char", "NULL", "LeftParen", 
			"RightParen", "LEFTBLOCK", "RIGHTBLOCK", "ARROW", "BOOLEAN", "Identifier", 
			"IMAG_NUMBER", "ORDER", "SKIP_"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SSExpr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SSExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StatContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SSExprParser.EOF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSExprVisitor ) return ((SSExprVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(80);
				expression();
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & ((1L << (T__0 - 1)) | (1L << (T__3 - 1)) | (1L << (T__11 - 1)) | (1L << (T__13 - 1)) | (1L << (T__19 - 1)) | (1L << (T__20 - 1)) | (1L << (T__21 - 1)) | (1L << (T__22 - 1)) | (1L << (PI - 1)) | (1L << (MIU - 1)) | (1L << (EB - 1)) | (1L << (EE - 1)) | (1L << (INTEGER - 1)) | (1L << (STRING - 1)) | (1L << (NUMBER - 1)) | (1L << (NULL - 1)) | (1L << (LeftParen - 1)) | (1L << (LEFTBLOCK - 1)) | (1L << (BOOLEAN - 1)) | (1L << (Identifier - 1)) | (1L << (IMAG_NUMBER - 1)))) != 0) );
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExprCompositeContext exprComposite() {
			return getRuleContext(ExprCompositeContext.class,0);
		}
		public IfExprContext ifExpr() {
			return getRuleContext(IfExprContext.class,0);
		}
		public ForInExprContext forInExpr() {
			return getRuleContext(ForInExprContext.class,0);
		}
		public ReturnExprContext returnExpr() {
			return getRuleContext(ReturnExprContext.class,0);
		}
		public VarAssignContext varAssign() {
			return getRuleContext(VarAssignContext.class,0);
		}
		public EachExprContext eachExpr() {
			return getRuleContext(EachExprContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSExprVisitor ) return ((SSExprVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				exprComposite(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				ifExpr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				forInExpr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				returnExpr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				varAssign();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(92);
				eachExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprCompositeContext extends ParserRuleContext {
		public ExprCompositeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprComposite; }
	 
		public ExprCompositeContext() { }
		public void copyFrom(ExprCompositeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ComplexExprCompositeContext extends ExprCompositeContext {
		public List<ExprCompositeContext> exprComposite() {
			return getRuleContexts(ExprCompositeContext.class);
		}
		public ExprCompositeContext exprComposite(int i) {
			return getRuleContext(ExprCompositeContext.class,i);
		}
		public TerminalNode Opertion() { return getToken(SSExprParser.Opertion, 0); }
		public ComplexExprCompositeContext(ExprCompositeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).enterComplexExprComposite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).exitComplexExprComposite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSExprVisitor ) return ((SSExprVisitor<? extends T>)visitor).visitComplexExprComposite(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SingleExprCompositeContext extends ExprCompositeContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SingleExprCompositeContext(ExprCompositeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).enterSingleExprComposite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).exitSingleExprComposite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSExprVisitor ) return ((SSExprVisitor<? extends T>)visitor).visitSingleExprComposite(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParenExprCompositeContext extends ExprCompositeContext {
		public TerminalNode LeftParen() { return getToken(SSExprParser.LeftParen, 0); }
		public ExprCompositeContext exprComposite() {
			return getRuleContext(ExprCompositeContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(SSExprParser.RightParen, 0); }
		public ParenExprCompositeContext(ExprCompositeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).enterParenExprComposite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).exitParenExprComposite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSExprVisitor ) return ((SSExprVisitor<? extends T>)visitor).visitParenExprComposite(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SingleExprLogicCompositeContext extends ExprCompositeContext {
		public ExprLogicContext exprLogic() {
			return getRuleContext(ExprLogicContext.class,0);
		}
		public SingleExprLogicCompositeContext(ExprCompositeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).enterSingleExprLogicComposite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).exitSingleExprLogicComposite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSExprVisitor ) return ((SSExprVisitor<? extends T>)visitor).visitSingleExprLogicComposite(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TernaryExprCompositeContext extends ExprCompositeContext {
		public TernaryExprContext ternaryExpr() {
			return getRuleContext(TernaryExprContext.class,0);
		}
		public TernaryExprCompositeContext(ExprCompositeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).enterTernaryExprComposite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).exitTernaryExprComposite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSExprVisitor ) return ((SSExprVisitor<? extends T>)visitor).visitTernaryExprComposite(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprCompositeContext exprComposite() throws RecognitionException {
		return exprComposite(0);
	}

	private ExprCompositeContext exprComposite(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprCompositeContext _localctx = new ExprCompositeContext(_ctx, _parentState);
		ExprCompositeContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_exprComposite, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				_localctx = new SingleExprCompositeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(96);
				expr(0);
				}
				break;
			case 2:
				{
				_localctx = new SingleExprLogicCompositeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(97);
				exprLogic();
				}
				break;
			case 3:
				{
				_localctx = new TernaryExprCompositeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(98);
				ternaryExpr();
				}
				break;
			case 4:
				{
				_localctx = new ParenExprCompositeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(99);
				match(LeftParen);
				setState(100);
				exprComposite(0);
				setState(101);
				match(RightParen);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(110);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ComplexExprCompositeContext(new ExprCompositeContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_exprComposite);
					setState(105);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(106);
					match(Opertion);
					setState(107);
					exprComposite(2);
					}
					} 
				}
				setState(112);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ForInExprContext extends ParserRuleContext {
		public TerminalNode LeftParen() { return getToken(SSExprParser.LeftParen, 0); }
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public UnitContext unit() {
			return getRuleContext(UnitContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(SSExprParser.RightParen, 0); }
		public TerminalNode LEFTBLOCK() { return getToken(SSExprParser.LEFTBLOCK, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode RIGHTBLOCK() { return getToken(SSExprParser.RIGHTBLOCK, 0); }
		public ForInExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forInExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).enterForInExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).exitForInExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSExprVisitor ) return ((SSExprVisitor<? extends T>)visitor).visitForInExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForInExprContext forInExpr() throws RecognitionException {
		ForInExprContext _localctx = new ForInExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_forInExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(T__0);
			setState(114);
			match(LeftParen);
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(115);
				variable();
				setState(116);
				match(T__1);
				}
				break;
			}
			setState(120);
			variable();
			setState(121);
			match(T__2);
			setState(122);
			unit();
			setState(123);
			match(RightParen);
			setState(124);
			match(LEFTBLOCK);
			setState(125);
			block();
			setState(126);
			match(RIGHTBLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfExprContext extends ParserRuleContext {
		public IfPartContext ifPart() {
			return getRuleContext(IfPartContext.class,0);
		}
		public List<ElseIfPartContext> elseIfPart() {
			return getRuleContexts(ElseIfPartContext.class);
		}
		public ElseIfPartContext elseIfPart(int i) {
			return getRuleContext(ElseIfPartContext.class,i);
		}
		public ElsePartContext elsePart() {
			return getRuleContext(ElsePartContext.class,0);
		}
		public IfExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).enterIfExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).exitIfExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSExprVisitor ) return ((SSExprVisitor<? extends T>)visitor).visitIfExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfExprContext ifExpr() throws RecognitionException {
		IfExprContext _localctx = new IfExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ifExpr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			ifPart();
			setState(132);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(129);
					elseIfPart();
					}
					} 
				}
				setState(134);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(135);
				elsePart();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfPartContext extends ParserRuleContext {
		public TerminalNode LeftParen() { return getToken(SSExprParser.LeftParen, 0); }
		public TestsContext tests() {
			return getRuleContext(TestsContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(SSExprParser.RightParen, 0); }
		public TerminalNode LEFTBLOCK() { return getToken(SSExprParser.LEFTBLOCK, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode RIGHTBLOCK() { return getToken(SSExprParser.RIGHTBLOCK, 0); }
		public IfPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).enterIfPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).exitIfPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSExprVisitor ) return ((SSExprVisitor<? extends T>)visitor).visitIfPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfPartContext ifPart() throws RecognitionException {
		IfPartContext _localctx = new IfPartContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifPart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(T__3);
			setState(139);
			match(LeftParen);
			setState(140);
			tests();
			setState(141);
			match(RightParen);
			setState(142);
			match(LEFTBLOCK);
			setState(143);
			block();
			setState(144);
			match(RIGHTBLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseIfPartContext extends ParserRuleContext {
		public TerminalNode LeftParen() { return getToken(SSExprParser.LeftParen, 0); }
		public TestsContext tests() {
			return getRuleContext(TestsContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(SSExprParser.RightParen, 0); }
		public TerminalNode LEFTBLOCK() { return getToken(SSExprParser.LEFTBLOCK, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode RIGHTBLOCK() { return getToken(SSExprParser.RIGHTBLOCK, 0); }
		public ElseIfPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseIfPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).enterElseIfPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).exitElseIfPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSExprVisitor ) return ((SSExprVisitor<? extends T>)visitor).visitElseIfPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseIfPartContext elseIfPart() throws RecognitionException {
		ElseIfPartContext _localctx = new ElseIfPartContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_elseIfPart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(T__4);
			setState(147);
			match(T__3);
			setState(148);
			match(LeftParen);
			setState(149);
			tests();
			setState(150);
			match(RightParen);
			setState(151);
			match(LEFTBLOCK);
			setState(152);
			block();
			setState(153);
			match(RIGHTBLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElsePartContext extends ParserRuleContext {
		public TerminalNode LEFTBLOCK() { return getToken(SSExprParser.LEFTBLOCK, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode RIGHTBLOCK() { return getToken(SSExprParser.RIGHTBLOCK, 0); }
		public ElsePartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elsePart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).enterElsePart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSExprListener ) ((SSExprListener)listener).exitElsePart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSExprVisitor ) return ((SSExprVisitor<? extends T>)visitor).visitElsePart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElsePartContext elsePart() throws RecognitionException {
		ElsePartContext _localctx = new ElsePartContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_elsePart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(T__4);
			setState(156);
			match(LEFTBLOCK);
			setState(157);
			block();
			setState(158);
			match(RIGHTBLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
